# cost-tracker

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/cost_tracker/: __init__.py  __main__.py  bridge_db.py  ccusage.py  server.py  session_sync.py  thresholds.py
tests/: test_bridge_db.py  test_ccusage.py  test_server.py  test_session_sync.py  test_thresholds.py
tests/fixtures/: ccusage_sample.json
