[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cost-tracker"
version = "0.1.0"
description = "MCP server for live in-session Claude Code cost visibility"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
cost-tracker = "cost_tracker.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cost_tracker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src/cost_tracker"]
omit = ["src/cost_tracker/__main__.py", "src/cost_tracker/server.py"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]
