[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cost-tracker"
version = "0.1.0"
description = "MCP server for live in-session Claude Code cost visibility"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
cost-tracker = "cost_tracker.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cost_tracker"]

[tool.ruff]
target-version = "py312"
extend = "../ruff.toml"

[tool.ruff.lint]
ignore = ["E501"]
extend-select = ["W", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src/cost_tracker"]
omit = ["src/cost_tracker/__main__.py", "src/cost_tracker/server.py"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]
